--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: phccspringhillsga@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Pasco-Hernando State College Spring Hill Student Government Association.
 baseurl: "" # the subpath of your site, e.g. /blog/
-# url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://kaymic.com/phscsga.github.io" # the base hostname & protocol for your site
 twitter_username: phscshsga
 
 # Build settings
