--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ gdrive_minutes_folder: 0B7KxO3iyK7HgNWlPcVZsMXRIQXc
 
 # Site settings
 title: PHSC Spring Hill Student Government Association
+brand: PHSC SGA
 
 description: > # this means to ignore newlines until "baseurl:"
   Pasco-Hernando State College Spring Hill Campus Student Government Association.
