--- a/_data/orgs.yaml
+++ b/_data/orgs.yaml
@@ -1,52 +1,52 @@
-- organization: "Student Government Associateion"
+- name: "Student Government Associateion"
   abbr: SGA
   meeting:
     time: "Mondays 1:00 p.m."
     location: E-101
   facebook: PHCCSpringHillSGA
-- organization: "Campus Crusade for Christ"
+- name: "Campus Crusade for Christ"
   abbr: CRU
   meeting:
     time: 
     location: 
   facebook: 
-- organization: "Disney Leadership Alliance"
+- name: "Disney Leadership Alliance"
   abbr: 
   meeting:
     time: 
     location: 
   facebook: 
-- organization: "Legal Eagles"
+- name: "Legal Eagles"
   abbr: 
   meeting:
     time: 
     location: 
   facebook: 
-- organization: "Men of Excellence"
+- name: "Men of Excellence"
   abbr: MOE
   meeting:
     time: "Thursdays 2:30 p.m."
     location: 
   facebook: 
-- organization: "Phi Beta Lambda"
+- name: "Phi Beta Lambda"
   abbr: PBL
   meeting:
     time: 
     location: 
   facebook: 
-- organization: "Phi Theta Kappa"
+- name: "Phi Theta Kappa"
   abbr: PTK
   meeting:
     time: 
     location: 
   facebook: 
-- organization: "Student Veterans"
+- name: "Student Veterans"
   abbr: 
   meeting:
     time: 
     location: 
   facebook: 
-- organization: "True Anime and Gaming"
+- name: "True Anime and Gaming"
   abbr: TAG
   meeting:
     time: 
